tests/fixtures/semantic/invalid/throw-outside-throws.ck
module app.bad

error Boom {
  bang
}

fn quiet() -> Int {
  throw Boom.bang
}
